# claude-projects-cli

./: README.md  pyproject.toml
src/claude_project/: __init__.py  __main__.py  exceptions.py  models.py  output.py
src/claude_project/auth/: config.py  cookies.py
src/claude_project/cli/: __init__.py  auth.py  chat.py  docs.py  projects.py
src/claude_project/client/: api.py  sse.py
