[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-project"
version = "0.2.0"
description = "CLI tool for managing Claude.ai Projects — create, update, and chat from the terminal."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Evocalize" },
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.scripts]
claude-project = "claude_project.cli:entry"
